--- a/erp-quimicos/src/main/webapp/vm/cuentascontables/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/cuentascontables/startup.vm
@@ -89,7 +89,7 @@
 					
                     <div id="div_two" title="" class="cuentascontables_div_two">
                         <div class="columns on-2">
-                            <div class="fixed column" id="cierra" style="width:650px; padding-left:6px;"><strong>Cuentas Contables</strong></div>
+                            <div class="fixed column" id="cierra" style="width:700px; padding-left:6px;"><strong>Cuentas Contables</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
                                 <div id="close" style="height:25px;background-image:url('../../img/modalbox/close.png'); background-color:; background-position:top; cursor:pointer; background-repeat:no-repeat;"></div>
                             </div>
@@ -113,20 +113,18 @@
                                     <div id="tabx-1" class="contenidoPes" >
                                         <table border="0" class="gral">
 											<tr>
-												<td width="5"></td>
 												<td width="80">Sucursal</td>
 												<td colspan="9" width="290"><select name="select_sucursal" style="width:290px;"></select></td>
-												<td width="50"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_suc"></div></td>
-												<td width="70"></td>
-												<td width="60"></td>
+												<td width="40"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_suc"></div></td>
+												<td width="90"></td>
+												<td width="180"></td>
 												<td width="25"></td>
 											</tr>
 											<tr>
-												<td width="15">&nbsp;</td>
+												<td width="14">&nbsp;</td>
 											</tr>
 											
 											<tr>
-												<td width="5"></td>
 												<td width="80">Cuenta</td>
 												<td width="50">
 													<!--<select name="select_cuenta" style="width:70px;"></select>-->
@@ -152,35 +150,54 @@
 													<!--<select name="select_subsubsubsubcuenta" style="width:70px;"></select>-->
 													<input type="text"name="sssscuenta" style="width:50px;" maxlength="4">
 												</td>
-												<td width="50"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_cta"></div></td>
-												<td width="70">Cta.&nbsp;Mayor</td>
-												<td width="60">
-													<select name="select_cuenta_mayor" style="width:55px;"></select>
-												</td>
+												<td width="40"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_cta"></div></td>
+												<td width="90">Cta.&nbsp;Mayor</td>
+												<td width="180"><select name="select_cuenta_mayor" style="width:180px;"></select></td>
 												<td width="25"></td>
 											</tr>
 											
 											<tr>
-												<td width="15">&nbsp;</td>
+												<td width="14">&nbsp;</td>
 											</tr>
 											
 											<tr>
-												<td width="5"></td>
 												<td width="80">Descripci&oacute;n</td>
 												<td colspan="9" width="290"><input type="text"name="descripcion" style="width:290px;" maxlength="60"></td>
-												<td width="50"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_descripcion"></div></td>
-												<td width="70">Centro de Costo</td>
-												<td width="60">
-													<select name="select_centro_costo" style="width:60px;"></select>
-												</td>
+												<td width="40"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_descripcion"></div></td>
+												<td width="90">Centro&nbsp;de&nbsp;Costo</td>
+												<td width="180"><select name="select_centro_costo" style="width:180px;"></select></td>
 												<td width="25"></td>
 											</tr>
 											<tr>
-												<td width="15">&nbsp;</td>
+												<td width="14">&nbsp;</td>
 											</tr>
 											
 											<tr>
-												<td width="5"></td>
+												<td width="80">Nivel&nbsp;de&nbsp;la&nbsp;Cta.</td>
+												<td width="110" colspan="3"><select name="select_nivel" style="width:110px;"></select></td>
+												<!--
+												<td width="10"></td>
+												<td width="70"><select name="select_subcuenta" style="width:70px;"></select></td>
+												-->
+												<td width="10"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nivelcta"></div></td>
+												<td width="50">Naturaleza</td>
+												<td width="10"></td>
+												<td width="110" colspan="3"><select name="select_naturaleza" style="width:110px;"></select></td>
+												<!--
+												<td width="10"></td>
+												<td width="50"></td>
+												-->
+												<td width="40"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_natcta"></div></td>
+												<td width="90">Tipo&nbsp;de&nbsp;Cuenta</td>
+												<td width="180"><select name="select_tipo_cta" style="width:180px;"></select></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_tipocta"></div></td>
+											</tr>
+											
+											<tr>
+												<td width="14">&nbsp;</td>
+											</tr>
+											
+											<tr>
 												<td width="80">Estatus</td>
 												<td width="110" colspan="3"><select name="select_estatus" style="width:110px;"></select></td>
 												<!--
@@ -202,9 +219,9 @@
 												<td width="50"></td>
 												<td width="10"></td>
 												<td width="50"></td>
-												<td width="50"></td>
-												<td width="100">Cuenta&nbsp;de&nbsp;Detalle</td>
-												<td width="25"><input type="checkbox" name="chk_cta_detalle"></td>
+												<td width="40"></td>
+												<td width="90">Cuenta&nbsp;de&nbsp;Detalle</td>
+												<td width="180"><input type="checkbox" name="chk_cta_detalle"></td>
 												<td width="25"></td>
 											</tr>
 											
@@ -246,11 +263,11 @@
                             </div>
 
 
-                            <div class="fixed column" id="botones" style="width:663px; background:; text-align:right; padding-left:; position:absolute;margin-top:4px;">
+                            <div class="fixed column" id="botones" style="width:713px; background:; text-align:right; padding-left:; position:absolute;margin-top:4px;">
 								<table border="0">
 									<tr><td colspan="4" height="7"></td></tr>
 									<tr>
-										<td width="563"></td>
+										<td width="613"></td>
 										<td>
 											<input type="image" src="../../img/modalbox/btn1.png" id="submit" style="width:77px; height:24px;"/>
 										</td>
