--- a/erp-quimicos/src/main/webapp/css/modalbox/cuentascontables/formaCuentasContables.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/cuentascontables/formaCuentasContables.css
@@ -97,8 +97,8 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .cuentascontables_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-	width:700px;
-    height:265px;
+	width:750px;
+    height:290px;
 	border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -109,7 +109,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 .cuentascontables_div_two{
 	/*font-family:tahoma;*/
-    width:700px;
+    width:750px;
     height:28px;
     background-color:#454442;
 	margin-top:0;
@@ -124,7 +124,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .cuentascontables_div_three{
 	/*font-family:tahoma;*/
 	font-size:11px;
-    width:690px;
+    /*width:690px;*/
     /*height:150px;*/
     background-color:#e9e9e9;
     margin-top:5px;
