--- a/erp-quimicos/src/main/webapp/vm/entradamercancias/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/entradamercancias/startup.vm
@@ -193,8 +193,7 @@
 												</td>
 												<td width="10"></td>
 												<td>
-													<!--
-													<table border="1" class="gral" id="table_lab">
+													<table border="0" class="gral" id="table_lab">
 														<tr>
 															<td width="10">&nbsp;</td>
 															<td >&nbsp;</td>
@@ -202,11 +201,10 @@
 														</tr>
 														<tr>
 															<td width="10"></td>
-															<td id="txtlab"></td>
+															<td ><span id="txtlab"></span></td>
 															<td width="25"><input type="checkbox" name="check_lab"></td>
 														</tr>
 													</table>
-													-->
 												</td>
 											</tr>
 											<tr>
